# LabCraft_printer

./: .gitignore  .gitmodules  AGENTS.md  README.md  STM32F446ZETx_FLASH.ld  default_settings.json  laser_cut_nozzles_and_squares.gcode  platformio.ini  post_clone.sh  pytest.ini  python_communication.py  requirements.in  requirements.txt  rpi_capture.py  setup_pi.sh  utils.py
Calibrations/: default_positions_droplet.json
FreeRTOS-interface/: App.py  CalibrationIdentity.py  CalibrationMemoryAggregator.py  CalibrationMemoryStore.py  CalibrationRecordExport.py  CaptureCoordinator.py  CaptureTypes.py  Controller.py  ExperimentAuditLog.py  ExperimentAuditReader.py  HostBlackBoxLog.py  LocalConfig.py  Machine_FreeRTOS.py  Machine_MVC.py  Model.py  PlateReaderAnalysisExport.py  PlateReaderAnalysisRunner.py  PlateReaderAnalysisWindow.py  QualificationCampaigns.py  QualificationReports.py  QualificationRunWorker.py  QualificationSuites.py  QualificationTiming.py  QualificationView.py  RegulatorCalibrationRunner.py  RegulatorCalibrationWindow.py  RegulatorProfiles.py  RegulatorSweepBuilder.py  ResetDebugBundle.py  View.py  debug_window.py  debug_window_raw.py  dfu_controller_mixin.py  dfu_update.py  dfu_update_worker.py  gpio_control.py
MVC-interface/: App.py  Camera.py  Camera_comp.py  Controller.py  Machine_MVC.py  Model.py  RefuelCamera.py  View.py  automatic_stock_calculation.py  collision_check.py  combinations.csv  dfu_control.py  exp_design_MVC.py  experiment_design.py  experiment_generation.ipynb  experiment_model_testing.py  locations.json  mock_reaction_compositions.csv  path_finding.py  pressure_calibration.py  simple_stock_calculation.py  stock_optimization.py  unit_tests-View.py  unit_tests.py
Print_arrays/: 10x10_0to9.csv  10x10_9to0.csv  5drops_10x10.csv  5drops_5x5.csv  array_generation.ipynb
Pyside6_interface/: App.py  Camera.py  CustomWidgets.py  Machine.py  default_settings.json  requirements-old.txt  stylesheet.qss
Python_interface/: App.py  Frames.py  Machine.py  python_communication.py  user_interface.py
boards/: genericSTM32F446ZE.json
docs/: PreBreakupDatasetAcquisitionProcess_plan.md  app_update_plan.md  baseline_characterization_registry_setup.md  calibration_identity_impl_phase2.md  calibration_identity_schema.md  calibration_memory_aggregation_schema.md  calibration_memory_impl_phase1.md  calibration_memory_impl_phase3.md  calibration_memory_impl_phase4.md  calibration_memory_phase6_export_analysis.md  calibration_memory_ui_phase5.md  calibration_prior_application.md  calibration_prior_selection.md  codebase_audit.md  (+24 more)
firmware/tests_host/: CMakeLists.txt
firmware/tests_host/tests/: test_comm_codec.cpp  test_crash_log_codec.cpp  test_crash_watchdog_selftest_policy.cpp  test_diagnostic_result_emitter.cpp  test_exti_debounce.cpp  test_flash_cycle_policy.cpp  test_flash_output_state.cpp  test_flash_safety.cpp  test_gripper_seal_qualification_math.cpp  test_motion_qualification_math.cpp  test_nvm_codec.cpp  test_orchestrator_completion_policy.cpp  test_orchestrator_decode.cpp  test_pressure_qualification_math.cpp  test_pressure_regulator_math.cpp  test_pressure_sensor_focus_policy.cpp  test_pressure_target_policy.cpp  test_pressure_trace_math.cpp  test_printer_completion_bits.cpp  test_regulator_profile_command_policy.cpp  test_reset_report_policy.cpp  test_selftest_command_policy.cpp  test_smoke.cpp  test_stepper_limit_policy.cpp  test_stepper_profile_math.cpp  test_valve_pulse_qualification_math.cpp
(+678 files in other folders)
